@@ -65,7 +65,9 @@ Version 1.3.1+svn:
    * turn bell can sound if other soundFX are turned off
    * the first turn starts again with the proper time of day (bug 8637)
    * removes the scaling handling in the halo, removing quite some code
-   * fixed various problems found by valgrind
+   * fixed various problems found by valgrind, note some invalid access are
+     now protected by asserts so there might be more crashes instead of silent
+     memory corruptions
 
 Version 1.3.1:
  * Campaignd
